--- a/pushButton.css
+++ b/pushButton.css
@@ -1,5 +1,10 @@
-.container{
-    width: 450px;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+        .container{
+    width: 400px;
     height: 300px;
     background-color: #6592CF;
     position: relative;
@@ -10,7 +15,7 @@
     height: 150px;
     background-color: #243D83;
     position: absolute;
-    left: 50px;
+    left: 20px;
     top: 68px;
 }
 
@@ -23,8 +28,23 @@
     top: -60px;
     border-radius: 50%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sub-circle{
-    
+    width: 150px;
+    height: 150px;
+    background-color: #243D83;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.yellow-circle{
+    width: 50px;
+    height: 50px;
+    background-color: #EEB850;
+    border-radius: 50%;
 }
